🐛 Fix Trello status align to center

--- a/src/styles/TrelloIntegration.scss
+++ b/src/styles/TrelloIntegration.scss
@@ -10,7 +10,7 @@
   padding: 20px;
 }
 
-.trello-status-text {
+.trello-status-container {
   text-align: center;
 }
 
